tamachi-vue CHANGELOG
=====================

以下、Git のタグ `ver0` からの変更を記録する。

* `Gemfile` に `webpacker` を追加して `bundle install`
* `rails webpacker:install`
* `rails webpacker:install:vue`